feat: Implementar sistema de autenticaciÃ³n real y seguridad por roles
- Agregar sistema de login con credenciales (email/contraseÃ±a)
- Implementar middleware de seguridad para proteger rutas por rol
- Crear API routes para autenticaciÃ³n (validate, session, logout)
- Agregar usuarios mock con credenciales de prueba
- Actualizar useAuth para usar cookies y validaciÃ³n del servidor
- Mejorar ProtectedRoute con validaciÃ³n del servidor
- RediseÃ±ar pÃ¡ginas de login, booking y menu con branding Zona Azul
- Limpiar cÃ³digo no utilizado (loginAs, archivos obsoletos)
- Actualizar service worker para evitar cachear requests POST
- Agregar documentaciÃ³n estratÃ©gica del proyecto

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "healthybox-demo",
+  "name": "zona-azul-pwa",
   "version": "0.1.0",
+  "description": "Experiencia PWA para Zona Azul: bienestar integral, dashboards por rol y contenido estratégico.",
   "private": true,
   "scripts": {
     "dev": "next dev",
