--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "HealthyBox - Comidas saludables",
-  "short_name": "HealthyBox",
-  "description": "Plataforma para agendar citas con nutricionistas y explorar menús saludables",
+  "name": "Zona Azul — Bienestar Integral",
+  "short_name": "Zona Azul",
+  "description": "Ecosistema de bienestar con planes nutricionales, comunidad y seguimiento personalizado",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f8fafc",
-  "theme_color": "#059669",
+  "background_color": "#f5f8ff",
+  "theme_color": "#1d4ed8",
   "orientation": "portrait-primary",
   "icons": [
     {
@@ -21,7 +21,7 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["health", "food", "lifestyle"],
+  "categories": ["health", "wellness", "food"],
   "lang": "es",
   "dir": "ltr"
 }
