feat: Mejoras completas en autenticaciÃ³n, mensajerÃ­a, ajustes y UX
- Sistema de mensajerÃ­a integrado en navbar (WhatsApp-like)
- SecciÃ³n de ajustes para todos los roles con gestiÃ³n de notificaciones
- Animaciones fluidas en transiciones y logout
- Sistema de notificaciones PWA completo
- Saludos interactivos personalizados por rol
- Mejoras en dashboards con datos reales y mÃ©tricas avanzadas
- Sistema de citas para nutricionistas
- GestiÃ³n mejorada de planes y asignaciÃ³n a suscriptores
- SincronizaciÃ³n en tiempo real entre roles
- Correcciones en autenticaciÃ³n y protecciÃ³n de rutas
- EliminaciÃ³n de credenciales de prueba del login
- Optimizaciones de rendimiento y UX

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,46 @@ yarn-error.log*
 
 # TypeScript
 *.tsbuildinfo
+
+# Documentación y archivos de desarrollo (no necesarios para PWA)
+/documentacion/
+*.md
+!README.md
+VERIFICACION_*.md
+*.txt
+
+# Datos de desarrollo/testing
+/data/
+/data/*.json
+
+# Archivos de IDE/Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# Archivos temporales
+*.tmp
+*.temp
+.cache/
+.turbo/
+
+# Archivos de sistema
+Thumbs.db
+Desktop.ini
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# OneDrive
+.onedriveignore
+
+# Archivos de backup
+*.bak
+*.backup
+*_backup
+*_old
