fix: Corregir errores de build para Netlify
- Corregir ruta de importaciÃ³n en booking/success/page.tsx
- Eliminar script migrate-mock-data.ts obsoleto
- Corregir errores de TypeScript con Set (usar Array.from)
- Corregir referencia a setSelectedTemplate inexistente
- Agregar type assertion para incident en pedidos
- Agregar netlify.toml para configuraciÃ³n de build
- Build completado exitosamente

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "next lint",
     "verify-supabase": "node scripts/verificar-supabase.js",
     "verify-deps": "node scripts/verificar-dependencias.js",
-    "migrate-mock": "node scripts/migrate-mock-to-supabase.js",
-    "migrate": "tsx scripts/migrate-mock-data.ts"
+    "migrate-mock": "node scripts/migrate-mock-to-supabase.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.0",
