--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.5",
     "@types/node": "24.9.2",
     "@types/react": "19.2.2",
     "autoprefixer": "^10.4.0",
