--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0"
   },
