--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@netlify/functions": "^2.8.2",
     "@netlify/plugin-nextjs": "^5.14.5",
     "@types/node": "24.9.2",
     "@types/react": "19.2.2",
