--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.3.1",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@netlify/functions": "^2.8.2",
