Actualización: nuevas funcionalidades y mejoras en la aplicación - Nuevas APIs: ingredientes, fichas técnicas, recetas, planes base, planes semanales - Mejoras en componentes UI y dashboards - Actualizaciones en notificaciones y sistema de pedidos - Nuevos scripts y seeds para base de datos - Refactorización de código y eliminación de archivos obsoletos

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "verify-supabase": "node scripts/verificar-supabase.js",
     "verify-deps": "node scripts/verificar-dependencias.js",
-    "migrate-mock": "node scripts/migrate-mock-to-supabase.js"
+    "migrate-mock": "node scripts/migrate-mock-to-supabase.js",
+    "seed:demo-plans": "tsx scripts/generateDemoPlans.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.0",
