--- a/netlify.toml
+++ b/netlify.toml
@@ -9,4 +9,9 @@
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
   NEXT_TELEMETRY_DISABLED = "1"
+  NODE_OPTIONS = "--max-old-space-size=4096"
+
+[functions]
+  node_bundler = "esbuild"
+  included_files = ["netlify/functions/**"]
 
