--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@netlify/functions": "^2.8.2",
     "@types/node": "24.9.2",
-    "@types/react": "19.2.2",
+    "@types/react": "^18.2.66",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
